--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
 	
 	</body>
 	
-	<!-- Последняя версия сайта : 0.2.0 -->
+	<!-- Последняя версия сайта : 0.2.1 -->
+	<!-- Обновление 0.2.1 : изменена ошибка с показом фото, удален не нужный код. -->
 	<!-- Обновление 0.2.0 : сайт оптимизирован, обновлен контент, добавлена информарция для горшка, а также история обновлений, а также изменились шрифты. -->
 	<!-- Обновление 0.1.1 : добавлен номер версии, добавлено и обновлено пару файлов. -->
 	<!-- Обновление 0.1.0 : создание сайта -->
